# Triangulum1

./: .coverage  .gitignore  AGENT_COLLABORATION_PROTOCOL.md  CONTRIBUTING.md  FINAL_Triangulation_Engine_Fix_Report.md  FINAL_Triangulum_Tasks.md  FINAL_Triangulum_Tasks_Report.md  FINAL_Triangulum_Tasks_Report_Updated.md  FINAL_Triangulum_Tasks_Updated.md  Makefile  PH1-BF1.T1_task_card.md  PH1-BF1.T2_task_card.md  PH1-BF1.T3_task_card.md  PH1-BF2.T1_completion.md  PH1-BF2.T1_task_card.md  PH1-BF2.T2_task_card.md  PH1-BF2.T3_completion.md  PH1-BF2.T3_task_card.md  PH1-BF3.T1_task_card.md  PH1-BF3.T2_completion.md  PH1-BF3.T2_task_card.md  PH1-BF3.T3_completion.md  PH1-BF3.T3_task_card.md  PH1-S1.2.T1_completion.md  PH1-S1.2.T1_task_card.md  PH1-S1.2.T2_completion.md  PH1-S1.2.T2_task_card.md  PH1-S1.2.T3_completion.md  PH1-S1.2.T3_task_card.md  PH1-S1.3.T1_completion.md  PH1-S1.3.T1_task_card.md  PH1-S1.3.T2_completion.md  PH1-S1.3.T2_task_card.md  PH1-S1.3.T3_completion.md  PH1-S1.3.T3_task_card.md  README.md  README_TRIANGULUM.md  README_TRIANGULUM_AGENTIC.md  REDESIGN_ORCHESTRATOR_PLAN.md  Reversion Of triangulum plan with self healing.MD  (+185 more)
.triangulum/: fix_database.json
.triangulum_assessment/: assessment_history.json  comprehensive_metrics.json  feature_map.json  triangulum_improvement_plan_20250701_003723.md
.triangulum_cache/: 027a816a_summary.json  07648100_summary.json  0c402233_summary.json  1139bce4_summary.json  11f1f3d7_summary.json  124d0c5c_summary.json  12cd5990_summary.json  14baee45_summary.json  1698fa34_summary.json  1ae25137_summary.json  1c0b0f26_summary.json  1e75be69_summary.json  1efaf95c_summary.json  2235b408_summary.json  250135f6_summary.json  25dd1180_summary.json  2919eb85_summary.json  2fa0e7d7_summary.json  2fc902d8_summary.json  32a6657e_summary.json  362fabb2_summary.json  379a8536_summary.json  379b29d6_summary.json  39985229_summary.json  3b2bd0af_summary.json  3f958fb9_summary.json  40285c4c_summary.json  437830e7_summary.json  48201298_summary.json  5190fa48_summary.json  52a9af22_summary.json  53949a2f_summary.json  5649d8f0_summary.json  577f2b5c_summary.json  5920fef8_summary.json  59e35e48_summary.json  5c6d86f9_summary.json  5eaab5ec_summary.json  5ffab0b3_summary.json  6250102c_summary.json  (+63 more)
.triangulum_health/: health_history.json  learned_metrics.json
buggy_files/: buggy_10.py  buggy_3.py  buggy_5.py  buggy_6.py  buggy_7.py  buggy_8.py  buggy_9.py
buggy_files_2/: buggy_10.py  buggy_4.py  buggy_5.py  buggy_6.py  buggy_7.py  buggy_8.py  buggy_9.py
cache/: dependency_graph_-1107268263512750995.json  dependency_graph_-1683420082181181017.json  dependency_graph_-1789388368488623854.json  dependency_graph_-3027938633464101405.json  dependency_graph_-3897843950532277406.json  (+40 more)
(+755 files in other folders)
