[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tsh"
version = "0.1.0"
authors = [
    { name="Jules", email="jules@example.com" },
]
description = "Triangulum Shell"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "click>=8.1",
    "watchdog",
    "pytest",
    "pytest-cov"
]

[project.scripts]
tsh = "tsh.main:tsh"
